# Lingo

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: lingo.yml  main.yml  test.yml
cmake/: CompilerOptions.cmake  hex.cmake  targets.cmake  unicode.cmake
doc/: TODO.md  assumptions.md  encoding.md  glossary.md  interfaces.md
src/: CMakeLists.txt
src/lib/: CMakeLists.txt
src/lib/catch/: CMakeLists.txt  catch.hpp
src/lib/lingo/: CMakeLists.txt  compressed_pair.hpp  constexpr.hpp  conversion_result.hpp  functions.hpp  lingo.natvis  null_terminated_string.hpp  standard_typedefs.hpp  string.hpp  string_converter.hpp  string_storage.hpp  string_view.hpp  string_view_storage.hpp  strlen.hpp
src/lib/lingo/encoding/: base.hpp  char.hpp  cstring.hpp  endian.hpp  execution.hpp  join.hpp  none.hpp  point_iterator.hpp  result.hpp  utf16.hpp  utf32.hpp  utf8.hpp  utf_iterator.hpp
src/lib/lingo/encoding/internal/: bit_converter.hpp
src/lib/lingo/error/: error_code.hpp  exception.hpp  strict.hpp
src/lib/lingo/page/: ascii.hpp  cstring.hpp  execution.hpp  intermediate.hpp  iso_8859.hpp  iso_8859_1.hpp  iso_8859_2.hpp  iso_8859_x.hpp.in  point_mapper.hpp  result.hpp  unicode.hpp  unicode_general_catagory.hpp  unicode_version.hpp
src/lib/lingo/page/internal/: iso_8859.hpp
src/lib/lingo/platform/: architecture.hpp  attributes.hpp  compiler.hpp  constexpr.hpp  endian.hpp  pragma.hpp  preprocessor.hpp  warnings.hpp  wchar.hpp
src/lib/lingo/set/: ascii.hpp  result.hpp  unicode.hpp
src/lib/lingo/utility/: compressed_pair.hpp  integer_sequence.hpp  item_traits.hpp  object_builder.hpp  pointer_iterator.hpp  span.hpp  type_traits.hpp
src/tools/: CMakeLists.txt
src/tools/command/: CMakeLists.txt
tests/: CMakeLists.txt
tests/functions/: CMakeLists.txt  strlen.cpp
tests/lingo/: CMakeLists.txt  minmax.cpp  null_terminated_string.cpp  string.cpp  string_converter.cpp  string_view.cpp  test_case.hpp  test_strings.hpp  test_types.hpp  tuple_matrix.hpp
tests/lingo/encoding/: base.cpp  endian.cpp  utf16.cpp  utf32.cpp  utf8.cpp
tests/lingo/page/: ascii.cpp  iso_8859.cpp  iso_8859_1.cpp  point_mapper.cpp  unicode.cpp
tests/lingo/platform/: endian.cpp
tests/lingo/test/: include_all.hpp  test_case.hpp  test_strings.hpp  test_types.hpp  tuple_matrix.hpp
tests/lingo/utility/: pointer_iterator.cpp
tests/main/: CMakeLists.txt  generate_strings.py  main.cpp  test_case.hpp  test_strings.hpp  test_types.hpp
tests/string/: CMakeLists.txt  sso.cpp
tests/string_view/: CMakeLists.txt  string_view.cpp
